tests/type/no_type_name.rev
var a: = 1 // error: type name expected after ':'